* plugin/soccer/Makefile.am: * plugin/soccer/export.cpp: * plugin/soccer/initeffector/staticmeshiniteffector.cpp: * plugin/soccer/initeffector/staticmeshiniteffector.h: * plugin/soccer/initeffector/staticmeshiniteffector_c.cpp: - new StaticMeshInitEffector which change 'matTeam' material of static mesh of agent to 'matLeft' or 'matRight' according to team side

--- a/plugin/soccer/Makefile.am
+++ b/plugin/soccer/Makefile.am
@@ -29,6 +29,8 @@ initeffector/initeffector.cpp \
 initeffector/initeffector_c.cpp \
 initeffector/singlematiniteffector.cpp \
 initeffector/singlematiniteffector_c.cpp \
+initeffector/staticmeshiniteffector.cpp \
+initeffector/staticmeshiniteffector_c.cpp \
 kickeffector/kickeffector.cpp \
 kickeffector/kickeffector_c.cpp \
 objectstate/objectstate.cpp \
@@ -83,6 +85,7 @@ hearperceptor/hearperceptor.h \
 initeffector/initaction.h \
 initeffector/initeffector.h \
 initeffector/singlematiniteffector.h \
+initeffector/staticmeshiniteffector.h \
 kickeffector/kickaction.h \
 kickeffector/kickeffector.h \
 objectstate/objectstate.h \
