* app/simspark/Makefile.am: * app/simspark/materials/nao.mtl: * app/simspark/models/lfoot.obj: * app/simspark/models/llowerarm.obj: * app/simspark/models/lshank.obj: * app/simspark/models/lthigh.obj: * app/simspark/models/lupperarm.obj: * app/simspark/models/naobody.obj: * app/simspark/models/naohead.obj: * app/simspark/models/rfoot.obj: * app/simspark/models/rlowerarm.obj: * app/simspark/models/rshank.obj: * app/simspark/models/rthigh.obj: * app/simspark/models/rupperarm.obj: - modify the obj file manually for setting team material - use only one .mtl file for the whole nao robot

--- a/app/simspark/Makefile.am
+++ b/app/simspark/Makefile.am
@@ -111,18 +111,7 @@ EXTRA_DIST = \
 	materials/soccerball.mtl\
 	materials/soccerbottorso.mtl\
 	materials/naosoccerfield.mtl\
-	materials/lthigh.mtl\
-	materials/rthigh.mtl\
-	materials/lfoot.mtl\
-	materials/lupperarm.mtl\
-	materials/rfoot.mtl\
-	materials/rupperarm.mtl\
-	materials/llowerarm.mtl\
-	materials/naobody.mtl\
-	materials/rlowerarm.mtl\
-	materials/lshank.mtl\
-	materials/naohead.mtl\
-	materials/rshank.mtl\
+	materials/nao.mtl\
 	textures/rcs-grass-w-lines.tga\
 	textures/rcs-grass.png\
 	textures/rcs-grass3.png\
