- add missing rsg file

--- a/app/simspark/Makefile.am
+++ b/app/simspark/Makefile.am
@@ -195,5 +195,6 @@ EXTRA_DIST = \
 	rsg/agent/soccerbot058/soccerbot.rsg\
 	rsg/agent/soccerbot058/box_with_hj_with_ccylinder.rsg\
 	rsg/agent/soccerbot058/foot.rsg\
-	rsg/agent/soccerbot058/soccerbottorso.rsg
+	rsg/agent/soccerbot058/soccerbottorso.rsg\
+	rsg/agent/soccerbot058/head.rsg
 
