--- a/app/simspark/Makefile.am
+++ b/app/simspark/Makefile.am
@@ -46,7 +46,7 @@ dist_pkgdata_DATA = \
 
 install-data-local: $(top_builddir)/$(subdir)/rsg/agent/ball.rsg
 	mkdir -p $(DESTDIR)$(pkgdatadir)/
-	find -type f -exec chmod a-x {} \;
+	find . -type f -exec chmod a-x {} \;
 	for res in rsg fonts scripts models textures materials;\
 	do \
 	rm -rf $(DESTDIR)$(pkgdatadir)/$$res;\
