Added new functions SetTime & SetScores to GameStateAspect. Might be useful for starting games in the middle DrobBall will not put the ball outside the field. Removed a useless typedef Some whitespace changes

--- a/linux/rcssserver3d.desktop
+++ b/linux/rcssserver3d.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=RCSSServer3D
-Comment=Robocup Soccer Simulation Server 3D
+Name=RoboCup Soccer Server 3D
+Comment=RoboCup Soccer Simulation Server 3D
 Exec=simspark
 Icon=rcssserver3d
 Terminal=false
