--- a/plugin/rosimporter/Makefile.am
+++ b/plugin/rosimporter/Makefile.am
@@ -11,6 +11,6 @@ rosimporter_la_SOURCES =\
 # -module tells automake we're not building a library but a loadable module
 # so we don't need the "lib" prefix in the module name
 rosimporter_la_LDFLAGS = -module -avoid-version -L${top_builddir}/utility/tinyxml
-rosimporter_la_LIBADD = -ltinyxml
+rosimporter_la_LIBADD = -ltinyxml_ex
 
 AM_CPPFLAGS = -I${top_srcdir}/lib -I${top_srcdir}/utility @RUBY_CPPFLAGS@
