--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,7 @@ rsgedit/wxutil/src/wxscintilla/src/.libs
 spark/.cdtconfigure.Build[!!-~](GNU)
 spark/.cproject
 spark/.project
+spark/.settings
 spark/Makefile
 spark/Makefile.in
 spark/aclocal.m4
