Some small fixes in running scripts Adding rcssserver3d's installation directory to the list of resource locations (not very clean!)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 rcssserver3d/.cdtconfigure.Build[!!-~](GNU)
 rcssserver3d/.cproject
 rcssserver3d/.project
+rcssserver3d/.settings
 rcssserver3d/Makefile
 rcssserver3d/Makefile.in
 rcssserver3d/aclocal.m4
