Add a new script: rcsoccersim3d to run both a server and a monitor, and shut down the server when monitor quits renamed simspark to rcssserver3d Updates release notes

--- a/.gitignore
+++ b/.gitignore
@@ -125,13 +125,13 @@ rcssserver3d/rcssmonitor3d/.libs
 rcssserver3d/rcssmonitor3d/Makefile
 rcssserver3d/rcssmonitor3d/Makefile.in
 rcssserver3d/rcssmonitor3d/rcssmonitor3d
+rcssserver3d/rcssserver3d/.deps
+rcssserver3d/rcssserver3d/.libs
+rcssserver3d/rcssserver3d/Makefile
+rcssserver3d/rcssserver3d/Makefile.in
+rcssserver3d/rcssserver3d/simspark
 rcssserver3d/rcssserver3d_config.h
 rcssserver3d/rcssserver3d_config.h.in
-rcssserver3d/simspark/.deps
-rcssserver3d/simspark/.libs
-rcssserver3d/simspark/Makefile
-rcssserver3d/simspark/Makefile.in
-rcssserver3d/simspark/simspark
 rcssserver3d/stamp-h1
 rsgedit/Makefile
 rsgedit/Makefile.in
