Add build.sh and clean.sh

--- a/.gitignore
+++ b/.gitignore
@@ -399,3 +399,4 @@ spark/utility/tinyxml/.deps
 spark/utility/tinyxml/.libs
 spark/utility/tinyxml/Makefile
 spark/utility/tinyxml/Makefile.in
+build
